# ai8x-training

./: .flake8  .gitignore  .gitmodules  .isort.cfg  .markdownlint.yaml  .pylintrc  .yamllint  AI84 SmallNet.xlsx  AI84 vs Arm Model.xlsx  AI84-AI85 Task List.docx  AI85 Wish List.docx  AI85 Wish List.txt  KNOWN_ISSUES.txt  LICENSE.md  NOTICE.txt  README.md  ai84.code-workspace  ai84.py  ai84cnn.py  ai84ize.py  ai84net.py  ai84net.xlsx  ai84net5 Performance.xlsx  ai85.py  ai85net-audio.py  ai85net-faceid.py  ai85net-kws.py  ai85net-test.py  ai8x-training.code-workspace  ai8x.py  ai8x_blocks.py  ai8x_fire.py  ai8x_nas.py  ai8x_ofa.py  apbaccess.py  armx4weights.py  batchnormfuser.py  check_cuda.py  checkpoint.py  cifar10-chw.yaml  (+177 more)
Device/: Makefile  arm_fully_connected_q7_q15_opt.c  arm_fully_connected_q7_q8p7_opt.c  arm_fully_connected_q7_s8p7_opt.c  arm_math.h  arm_softmax_q7_q15.c  arm_softmax_q8p7_q15.c  arm_softmax_q8p7_q15_frac.c  arm_softmax_s8p7_q15.c  arm_softmax_s8p7_q15_frac.c  tornadocnn.h
TensorFlow/: .flake8  README.md  ai8xTF.py  convert.py  evaluate.py  evaluate_ALL.sh  evaluate_all.sh  evaluate_cifar10.sh  evaluate_cifar100.sh  evaluate_fashionmnist.sh  evaluate_kws20.sh  evaluate_mnist.sh  evaluate_rock.sh  quantitize_weights.py  quantize_ALL.sh  quantize_cifar10.sh  quantize_cifar100.sh  quantize_kws20.sh  quantize_mnist.sh  quantize_rock.sh  requirements.txt  requirements_TF.txt  requirements_tf.txt  tf-sample2izer.py  train.py  train_ALL.sh  train_all.sh  train_cifar10.sh  train_cifar100.sh  train_fashionmnist.sh  train_kws20.sh  train_mnist.sh  train_rock.sh
attic/: evaluate_cifar10_bias.sh  evaluate_fashionmnist.sh  go_prune.sh  go_quantized.sh  inspect_ckpt.py  post_train.yaml  post_train_ai84.yaml  prune.yaml  quant_train.yaml  quant_train_ai84.yaml  quantize_cifar10.sh  quantize_fashionmnist.sh  quantize_mnist.sh  range_linear_ai84.py  train_afsk.sh  train_cifar10_bias.sh
codes/: Automated_Evaluation_KWS.ipynb  Automated_Evaluation_KWS_v2.ipynb  acc.csv  energydet.ipynb  evaluate_snr.py  msnoise_test.ipynb  noise.ipynb  snr_test.ipynb  speechmixer.ipynb
datasets/: __init__.py  afsk.py  aisegment.py  asl.py  bg20k.py  camvid.py  camvid_v0.py  cats_vs_dogs.py  cbm_dataframe_parser.py  cifar.py  cifar100.py  faceid.py  image_mixer.py  imagenet.py  kinetics.py  kws20.py  kws_few.py  mixedkws.py  mnist.py  msnoise.py  pascalvoc.py  qrcode.py  samplemotordatalimerick.py  signalmixer.py  speechcom.py  speechcomfolded1D.py  svhn.py  vggface2.py  vggface2_facedet.py  visualize.py  (+1 more)
(+474 files in other folders)
